Fix HTML attribute color

--- a/styles/syntax/css.less
+++ b/styles/syntax/css.less
@@ -7,4 +7,10 @@
 		color: @hue-3;
     }
   }
+
+  .syntax--entity {
+    &.syntax--other.syntax--attribute-name {
+      color: @hue-5;
+    }
+  }
 }
