--- a/styles/syntax/javascript.less
+++ b/styles/syntax/javascript.less
@@ -15,3 +15,22 @@
     }
   }
 }
+
+.syntax--arguments {
+	color: @hue-3;
+}
+
+.syntax--comma,
+.syntax--bracket,
+.syntax--curly,
+.syntax--terminator {
+	color: @mono-1;
+}
+
+.syntax--var {
+	color: @hue-2;
+}
+
+.syntax--variable.syntax--parameter {
+	color: @hue-3;
+}
