--- a/styles/syntax/javascript.less
+++ b/styles/syntax/javascript.less
@@ -1,6 +1,6 @@
 .syntax--source.syntax--js {
   .syntax--keyword.syntax--operator {
-    color: @hue-1;
+    color: @syntax-fg;
 
     // keywords are definded in https://github.com/atom/language-javascript/blob/master/grammars/javascript.cson
     // search "instanceof" for location
@@ -22,9 +22,11 @@
 
 .syntax--comma,
 .syntax--bracket,
+.syntax--round,
 .syntax--curly,
+.syntax--square,
 .syntax--terminator {
-	color: @mono-1;
+	color: @syntax-fg;
 }
 
 .syntax--var {
